# Contact_Aware_Neural_Dynamics

./: .gitignore  MUJOCO_LOG.TXT  README.md  REPRODUCE_3hq3kpce.md  REPRODUCE_clean_release_continue_53cisq88.md  REPRODUCE_clean_release_continue_x2_f9w51un5.md  Setup:check_setup.py  TRIAL_AND_ERROR_REPORT.md  cand_test.ipynb  dataset_test.py  pyproject.toml  test_hand.py  watch_ai.py
Setup/: humanoid_env.py  humanoid_lift_env.py  humanoid_test.py  requirements.txt  train.py  utils.py  wandb_config.yaml  watch_ai.py
Testing Output/: cand_test.ipynb  humanoid_test.py  test_hand.py  test_hand2.py  test_hand3.py
configs/: arm_box.yaml  arm_clean_release_ee.yaml  arm_clean_release_joint.yaml  arm_ee_place_priority.yaml  arm_grasp_lift.yaml  arm_place_priority.yaml  cartesian_grasp_lift.yaml  cartesian_place_priority.yaml  cartesian_place_priority_motion_release_hybrid.yaml  cartesian_place_priority_release_corridor.yaml  cartesian_place_priority_release_corridor_long.yaml  clean_release.yaml  default.yaml  smoke.yaml
configs/baselines/: dashing_water_66_exact.yaml  dashing_water_66_exact_no_plateau.yaml  fresh_firebrand_75_no_plateau.yaml
scripts/: run_arm_clean_release_sweep.py  run_arm_closed_loop_sweep.py  run_fair_no_contact_baselines.sh  run_named_baselines.sh
src/contact_aware_rl/: __init__.py  callbacks.py  config.py  env.py  evaluate.py  evaluation.py  experiment.py  logging_utils.py  modes.py  (+3 more)
tests/: test_arm_clean_release_sweep.py  test_callbacks.py  test_env.py  test_evaluation.py  test_runtime.py  test_training.py  test_vector_env.py  test_wandb.py
(+24 files in other folders)
