[project]
name = "contact-aware-neural-dynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "mujoco>=3.5.0",
    "numpy>=2.0.2",
    "pyyaml>=6.0.2",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "wandb>=0.25.1",
]
